--- a/speakers.html
+++ b/speakers.html
@@ -1,3 +1,49 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!--
+Template Name: Jimmy Baraglia
+Author: <a href="http://www.os-templates.com/">OS Templates</a>
+Author URI: http://www.os-templates.com/
+Licence: Free to use under our free template licence terms
+Licence URI: http://www.os-templates.com/template-terms
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
+
+<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+</head>
+<body id="top">
+
+<center>
+<img src="images/header_online.jpg" alt="Logo" height="276px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+
+<!-- ####################################################################################################### -->
+<div class="wrapper row2">
+  <div class="rnd">
+    <!-- ###### -->
+    <div id="topnav">
+      <ul>
+        <li><a style="font-size: 20px" href="index.html" data-target="home">Home</a></li>
+	<li><a style="font-size: 20px" href="organizers.html" data-target="organizers">Organizers</a></li>
+        <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
+        <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
+        <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
+        <li><a style="font-size: 20px" href="contact.html" data-target="contact">Contact</a></li>
+      </ul>
+    </div>
+    <!-- ###### -->
+  </div>
+</div>
+
+<div class="wrapper row3">
+  <div class="rnd">
+    <div id="container " class="clear text-center">
+      <!-- ####################################################################################################### -->
+		<div id="content" style="width:95%; text-align:center; margin:10px">
+
+
 <div class="container" style="font-size:18px;">
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/man.png" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
@@ -23,7 +69,7 @@
 		<img src="images/display/man.png" alt="Stefan Wermter" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
-			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br>Universität Hamburg</br></br>
+			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br>Universitat Hamburg</br></br>
 			To be announced</strong></br>
                         </br> 
 		</p>
@@ -90,9 +136,9 @@
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Nicolás Navarro-Guerrero" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/man.png" alt="Nicolas Navarro-Guerrero" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://nicolas-navarro-guerrero.github.io/" target="_blank">Nicolás Navarro-Guerrero</a></br>
+			<strong><a href="https://nicolas-navarro-guerrero.github.io/" target="_blank">Nicolas Navarro-Guerrero</a></br>
 			<a href="https://eng.au.dk/en/cognitive-and-developmental-robotics/" target="_blank">Cognitive and Developmental Robotics</a><br/>Aarhus University</br></br>
 			To be announced</strong></br>
                         </br> 
@@ -120,3 +166,28 @@
 	</div>
 
 </div>
+
+		</div>
+      <!-- ####################################################################################################### -->
+    </div>
+  </div>
+</div>
+<!-- ####################################################################################################### -->
+<div class="wrapper row4">
+  <div class="rnd">
+    <div id="footer" class="clear">
+      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - In conjunction with <a target="blank" href="https://icdl-2021.org">IEEE ICDL 2021</a>
+<p>
+<div style="margin: auto;">
+	
+	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.png" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.unab.cl"><img src="images/unab.png" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.iit.it"><img src="images/iit.png" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
+
+	</div>
+    </div>
+  </div>
+</div>
+<!-- ####################################################################################################### -->
+</body>
+</html>
