--- a/organizers.html
+++ b/organizers.html
@@ -59,7 +59,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<img src="images/display/tkarimpanal.png" alt="Thommen George Karimpanal" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/tkarimpanal.PNG" alt="Thommen George Karimpanal" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.thommengk.com/" target="_blank">Thommen George Karimpanal</br></a>
 			<a href="https://www.deakin.edu.au/a2i2" target="_blank">Applied Artificial Intelligence Institute</a></br>
@@ -79,7 +79,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<img src="images/display/pbarros.png" alt="Pablo Barros" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/pbarros.PNG" alt="Pablo Barros" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="http://pablobarros.net" target="_blank">Pablo Barros</br></a>
 			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies Unit</a></br>
@@ -89,7 +89,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<img src="images/display/rdazeley.png" alt="Richard Dazeley" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/rdazeley.PNG" alt="Richard Dazeley" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</br></a>
 			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a></br>
