--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 
 	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<img src="images/display/tkarimpanal.png" alt="Thommen George Karimpanal" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/tkarimpanal.PNG" alt="Thommen George Karimpanal" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.thommengk.com/" target="_blank">Thommen George Karimpanal</br></a>
 			<a href="https://www.deakin.edu.au/a2i2" target="_blank">Applied Artificial Intelligence Institute</a></br>
