fixing logo images at footer

--- a/organizers.html
+++ b/organizers.html
@@ -113,9 +113,9 @@ Licence URI: http://www.os-templates.com/template-terms
 <p>
 <div style="margin: auto;">
 	
-	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.png" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.unab.cl"><img src="images/unab.png" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.iit.it"><img src="images/iit.png" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
 
 	</div>
     </div>
