--- a/cfp.html
+++ b/cfp.html
@@ -47,17 +47,17 @@ Prospective participants in the workshop are required to submit a contribution a
     - Extended abstract (max 2 pages)</br>
     - Full paper (max 6 pages)</br></br>
 
-Submissions must be in PDF following the <a href="http://ras.papercept.net/conferences/support/support.php" target="_blank">IEEE conference style in two-columns</a>.
+where both pages limit include references. Submissions must be in PDF following the <a href="http://ras.papercept.net/conferences/support/support.php" target="_blank">IEEE conference style in two-columns</a>, and they will follow a single blind review process.
 <br>Send your PDF manuscript through EasyChair: <a href="https://easychair.org/conferences/?conf=harlworkshop2021">here</a></br></br> 
 
 
-Selected contributions will be presented during the workshop as <b>online</b> spotlight talks.</br></br>
+Selected contributions will be presented during the workshop as <b>online</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
 
 
 <strong>Important dates:</strong></br></br>
-    Paper submission deadline:  July 02, 2021 </br>
+    Paper submission deadline:  July 02, 2021 (23:59 AoE)</br>
     Notification of acceptance: July 30, 2021</br>
-    Camera-ready version: August 12, 2021</br>
+    Camera-ready version: August 12, 2021 (23:59 AoE)</br>
     Workshop: August 27, 2021 </br></br>
 
 <strong>Journal Special Issue:</strong></br></br>
