--- a/index.html
+++ b/index.html
@@ -87,17 +87,15 @@ In this regard, approaches with special interest for this workshop are (but not 
 
 <br/>
 <strong>Important dates:</strong></br></br>
-    Paper submission deadline:  July 02, 2021 </br>
+    Paper submission deadline:  July 02, 2021 (23:59 AoE)</br>
     Notification of acceptance: July 30, 2021</br>
-    Camera-ready version: August 12, 2021</br>
+    Camera-ready version: August 12, 2021 (23:59 AoE)</br>
     Workshop: August 27, 2021 </br></br>
 <br/>
 
-Selected contributions will be presented during the workshop as <b>online</b> spotlight talks.
-<br/>
-<br/>
+Selected contributions will be presented during the workshop as <b>online</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
 Contributors to the workshop will be invited to submit extended versions
-of the manuscripts to a special issue whose Call for Papers can be found <a href="https://www.springer.com/journal/521/updates/19055662" target="_blank">here</a>.<br/>
+of the manuscripts to a <b>special issue</b> whose Call for Papers can be found <a href="https://www.springer.com/journal/521/updates/19055662" target="_blank">here</a>.<br/>
 Submissions will be peer reviewed consistent with the journal practices.
 <br/>
 <br/>
