--- a/speakers.html
+++ b/speakers.html
@@ -107,11 +107,12 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Felipe Leno da Silva" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/fleno.PNG" alt="Felipe Leno da Silva" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://f-leno.github.io/" target="_blank">Felipe Leno da Silva</a></br>
 			<a href="https://st.llnl.gov/research" target="_blank">Lawrence Livermore National Lab</a></br></br>
-			To be announced</strong></br>
+			</strong></br>
+			<b>Action Advising for Accelerating Multiagent Reinforcement Learning</b> - 17.30 CEST</br>
                         </br> 
 		</p>
 	</div>
