--- a/speakers.html
+++ b/speakers.html
@@ -61,7 +61,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong><a href="https://www.iit.it/people/alessandra-sciutti" target="_blank">Alessandra Sciutti</a></br>
 			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies unit</a></br>Istituto Italiano di Tecnologia</br></br>
 			</strong></br>
-			<b>More Human Learning</b> - 14.00 CEST</br>
+			<b>More Human Learning</b></br>14.00 CEST</br>
                         </br> 
 		</p>
 	</div>
@@ -112,7 +112,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong><a href="https://f-leno.github.io/" target="_blank">Felipe Leno da Silva</a></br>
 			<a href="https://st.llnl.gov/research" target="_blank">Lawrence Livermore National Lab</a></br></br>
 			</strong></br>
-			<b>Action Advising for Accelerating Multiagent Reinforcement Learning</b> - 17.30 CEST</br>
+			<b>Action Advising for Accelerating Multiagent Reinforcement Learning</b></br>17.30 CEST</br>
                         </br> 
 		</p>
 	</div>
