restoring last update

--- a/speakers.html
+++ b/speakers.html
@@ -56,11 +56,12 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/woman.jpg" alt="Alessandra Sciutti" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/asciutti.jpg" alt="Alessandra Sciutti" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.iit.it/people/alessandra-sciutti" target="_blank">Alessandra Sciutti</a></br>
 			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies unit</a></br>Istituto Italiano di Tecnologia</br></br>
-			To be announced</strong></br>
+			</strong></br>
+			<b>More Human Learning</b></br>14.00 CEST</br>
                         </br> 
 		</p>
 	</div>
@@ -106,11 +107,12 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Felipe Leno da Silva" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/fleno.png" alt="Felipe Leno da Silva" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://f-leno.github.io/" target="_blank">Felipe Leno da Silva</a></br>
 			<a href="https://st.llnl.gov/research" target="_blank">Lawrence Livermore National Lab</a></br></br>
-			To be announced</strong></br>
+			</strong></br>
+			<b>Action Advising for Accelerating Multiagent Reinforcement Learning</b></br>17.30 CEST</br>
                         </br> 
 		</p>
 	</div>
