brad and matthew talks

--- a/speakers.html
+++ b/speakers.html
@@ -45,15 +45,6 @@ Licence URI: http://www.os-templates.com/template-terms
 
 
 <div class="container" style="font-size:18px;">
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://drmatttaylor.net/" target="_blank">Matthew Taylor</a></br>
-			<a href="https://irll.ca" target="_blank">Intelligent Robot Learning Laboratory</a></br>University of Alberta</br></br>
-			To be announced</strong></br>
-                        </br> 
-		</p>
-	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/asciutti.jpg" alt="Alessandra Sciutti" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
@@ -87,21 +78,33 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Bradley Knox" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/man.png" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://www.bradknox.net/" target="_blank">Bradley Knox</a></br>
-			<a href="https://www.bosch.com/research/" target="_blank">Bosch</a></br></br>
+			<strong><a href="https://www.benjaminrosman.com/" target="_blank">Benjamin Rosman</a></br>
+			<a href="https://www.bosch.com/research/" target="_blank">School of Computer Science and Applied Mathematics</a><br/>University of the Witwatersrand</br></br>
 			To be announced</strong></br>
                         </br> 
 		</p>
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/wbknox.jpg" alt="W. Bradley Knox" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://www.benjaminrosman.com/" target="_blank">Benjamin Rosman</a></br>
-			<a href="https://www.bosch.com/research/" target="_blank">School of Computer Science and Applied Mathematics</a><br/>University of the Witwatersrand</br></br>
-			To be announced</strong></br>
+			<strong><a href="https://www.bradknox.net/" target="_blank">W. Bradley Knox</a></br>
+			<a href="https://www.bosch.com/research/" target="_blank">Bosch</a></br></br>
+			</strong></br>
+			<b>Reward (Mis)design for Autonomous Driving</b></br>16.30 CEST</br>
+                        </br> 
+		</p>
+	</div>
+
+	<div style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/man.png" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://drmatttaylor.net/" target="_blank">Matthew Taylor</a></br>
+			<a href="https://irll.ca" target="_blank">Intelligent Robot Learning Laboratory</a></br>University of Alberta</br></br>
+			</strong></br>
+			<b>Agents learning from humans -- what the heck do you want me to do?</b></br>17.00 CEST</br>
                         </br> 
 		</p>
 	</div>
