--- a/speakers.html
+++ b/speakers.html
@@ -100,7 +100,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/mtaylor.jpg" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://drmatttaylor.net/" target="_blank">Matthew Taylor</a></br>
 			<a href="https://irll.ca" target="_blank">Intelligent Robot Learning Laboratory</a></br>University of Alberta</br></br>
