--- a/speakers.html
+++ b/speakers.html
@@ -162,11 +162,12 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Richard Dazeley" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/rdazeley.jpg" alt="Richard Dazeley" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</a></br>
 			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a><br/>Deakin University</br></br>
-			To be announced</strong></br>
+			</strong></br>
+			<b>Broad-XAI: Human-aligned conversational explanations</b></br>
                         </br> 
 		</p>
 	</div>
