jens talk and picture

--- a/speakers.html
+++ b/speakers.html
@@ -58,6 +58,17 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/jkober.jpg" alt="Jens Kober" height="200px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="http://www.jenskober.de/" target="_blank">Jens Kober</a></br>
+			<a href="https://www.tudelft.nl/en/3me/about/departments/cognitive-robotics-cor/" target="_blank">Cognitive Robotics Dept</a><br/>Delft University of Technology</br></br>
+			</strong></br>
+			<b>Reinforcement Learning with Interactive Corrections</b></br>12.30 CEST</br>
+                        </br> 
+		</p>
+	</div>
+
+	<div style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/asciutti.jpg" alt="Alessandra Sciutti" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.iit.it/people/alessandra-sciutti" target="_blank">Alessandra Sciutti</a></br>
@@ -117,16 +128,6 @@ Licence URI: http://www.os-templates.com/template-terms
 			<a href="https://st.llnl.gov/research" target="_blank">Lawrence Livermore National Lab</a></br></br>
 			</strong></br>
 			<b>Action Advising for Accelerating Multiagent Reinforcement Learning</b></br>17.30 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Jens Kober" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="http://www.jenskober.de/" target="_blank">Jens Kober</a></br>
-			<a href="https://www.tudelft.nl/en/3me/about/departments/cognitive-robotics-cor/" target="_blank">Cognitive Robotics Dept</a><br/>Delft University of Technology</br></br>
-			To be announced</strong></br>
                         </br> 
 		</p>
 	</div>
