peter picture and time slot

--- a/speakers.html
+++ b/speakers.html
@@ -47,12 +47,23 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="container" style="font-size:18px;">
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/pvamplew.jpg" alt="Peter Vamplew" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences/staff-profiles/information-technology/peter-vamplew" target="_blank">Peter Vamplew</a></br>
+			<a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences" target="_blank">School of Engineering, Information Technology and Physical Sciences</a></br>Federation University</br></br>
+			</strong></br>
+			<b>to be announced</b></br>11.00 CEST</br>
+                        </br> 
+		</p>
+	</div>
+
+	<div style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/brosman.jpg" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.benjaminrosman.com/" target="_blank">Benjamin Rosman</a></br>
 			<a href="https://www.bosch.com/research/" target="_blank">School of Computer Science and Applied Mathematics</a><br/>University of the Witwatersrand</br></br>
 			</strong></br>
-			<b>to be announced</b></br>12.00 CEST (midday)</br>
+			<b>to be announced</b></br>12.00 CEST</br>
                         </br> 
 		</p>
 	</div>
@@ -84,16 +95,6 @@ Licence URI: http://www.os-templates.com/template-terms
 		<p style="text-align:justify;">
 			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
 			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br>Universitat Hamburg</br></br>
-			To be announced</strong></br>
-                        </br> 
-		</p>
-	</div>
-
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Peter Vamplew" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences/staff-profiles/information-technology/peter-vamplew" target="_blank">Peter Vamplew</a></br>
-			<a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences" target="_blank">School of Engineering, Information Technology and Physical Sciences</a></br>Federation University</br></br>
 			To be announced</strong></br>
                         </br> 
 		</p>
