patrick pilarski picture and title

--- a/speakers.html
+++ b/speakers.html
@@ -154,6 +154,18 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/ppilarski.jpg" alt="Patrick Pilarski" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://sites.ualberta.ca/~pilarski/" target="_blank">Patrick Pilarski</a></br>
+			<a href="https://www.ualberta.ca/medicine/index.html" target="_blank"> Faculty of Medicine and Dentistry</a><br/>University of Alberta</br>
+			<a href="https://deepmind.com/" target="_blank"> DeepMind</a><br/>Edmonton, Alberta</br></br>
+			</strong></br>
+			<b>Constructivism in Tightly Coupled Human Machine Interfaces</b></br>
+                        </br> 
+		</p>
+	</div>
+
+	<div style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/rdazeley.jpg" alt="Richard Dazeley" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</a></br>
