--- a/speakers.html
+++ b/speakers.html
@@ -50,7 +50,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/pvamplew.jpg" alt="Peter Vamplew" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences/staff-profiles/information-technology/peter-vamplew" target="_blank">Peter Vamplew</a></br>
-			<a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences" target="_blank">School of Engineering, Information Technology and Physical Sciences</a></br>Federation University</br></br>
+			<a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences" target="_blank">School of Engineering, Information Technology and Physical Sciences</a></br><a href="https://federation.edu.au/" target="_blank">Federation University</a></br></br>
 			</strong></br>
 			<b>to be announced</b></br>11.00 CEST</br>
                         </br> 
@@ -61,7 +61,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/brosman.jpg" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.benjaminrosman.com/" target="_blank">Benjamin Rosman</a></br>
-			<a href="https://www.bosch.com/research/" target="_blank">School of Computer Science and Applied Mathematics</a><br/>University of the Witwatersrand</br></br>
+			<a href="https://www.wits.ac.za/csam/" target="_blank">School of Computer Science and Applied Mathematics</a><br/><a href="https://www.wits.ac.za/" target="_blank">University of the Witwatersrand</a></br></br>
 			</strong></br>
 			<b>to be announced</b></br>12.00 CEST</br>
                         </br> 
@@ -72,7 +72,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/jkober.jpg" alt="Jens Kober" height="200px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="http://www.jenskober.de/" target="_blank">Jens Kober</a></br>
-			<a href="https://www.tudelft.nl/en/3me/about/departments/cognitive-robotics-cor/" target="_blank">Cognitive Robotics Dept</a><br/>Delft University of Technology</br></br>
+			<a href="https://www.tudelft.nl/en/3me/about/departments/cognitive-robotics-cor/" target="_blank">Cognitive Robotics Dept</a><br/><a href="https://www.tudelft.nl/" target="_blank">Delft University of Technology</a></br></br>
 			</strong></br>
 			<b>Reinforcement Learning with Interactive Corrections</b></br>12.30 CEST</br>
                         </br> 
@@ -83,7 +83,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/asciutti.jpg" alt="Alessandra Sciutti" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.iit.it/people/alessandra-sciutti" target="_blank">Alessandra Sciutti</a></br>
-			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies unit</a></br>Istituto Italiano di Tecnologia</br></br>
+			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies unit</a></br><a href="https://www.iit.it/" target="_blank">Istituto Italiano di Tecnologia</a></br></br>
 			</strong></br>
 			<b>More Human Learning</b></br>14.00 CEST</br>
                         </br> 
@@ -94,7 +94,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/man.png" alt="Stefan Wermter" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
-			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br>Universitat Hamburg</br></br>
+			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
 			To be announced</strong></br>
                         </br> 
 		</p>
@@ -104,7 +104,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/wbknox.jpg" alt="W. Bradley Knox" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.bradknox.net/" target="_blank">W. Bradley Knox</a></br>
-			<a href="https://www.bosch.com/research/" target="_blank">Bosch</a></br></br>
+			<a href="https://www.bosch.us" target="_blank">Robert Bosch LLC, Austin, Texas</a></br></br>
 			</strong></br>
 			<b>Reward (Mis)design for Autonomous Driving</b></br>16.30 CEST</br>
                         </br> 
@@ -115,7 +115,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/mtaylor.jpg" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://drmatttaylor.net/" target="_blank">Matthew Taylor</a></br>
-			<a href="https://irll.ca" target="_blank">Intelligent Robot Learning Laboratory</a></br>University of Alberta</br></br>
+			<a href="https://irll.ca" target="_blank">Intelligent Robot Learning Laboratory</a></br><a href="https://www.ualberta.ca" target="_blank">University of Alberta</a></br></br>
 			</strong></br>
 			<b>Agents learning from humans -- what the heck do you want me to do?</b></br>17.00 CEST</br>
                         </br> 
@@ -134,20 +134,20 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Bruno Fernandes" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/bfernandes.jpg" alt="Bruno Fernandes" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://sites.google.com/ecomp.poli.br/bjtf" target="_blank">Bruno Fernandes</a></br>
-			<a href="http://www.ecomp.poli.br/" target="_blank">Computer Engineering Dept</a><br/>University of Pernambuco</br></br>
+			<a href="http://www.ecomp.poli.br/" target="_blank">Computer Engineering Dept</a><br/><a href="https://www.ufpe.br/" target="_blank">University of Pernambuco</a></br></br>
 			To be announced</strong></br>
                         </br> 
 		</p>
 	</div>
 
 	<div style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="George Konidaris" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/gkonidaris.jpg" alt="George Konidaris" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="http://cs.brown.edu/people/gdk/" target="_blank">George Konidaris</a></br>
-			<a href="http://irl.cs.brown.edu/" target="_blank">Intelligent Robot Lab</a><br/>Brown University</br></br>
+			<a href="http://irl.cs.brown.edu/" target="_blank">Intelligent Robot Lab</a><br/><a href="https://www.brown.edu/" target="_blank">Brown University</a></br></br>
 			To be announced</strong></br>
                         </br> 
 		</p>
@@ -157,8 +157,8 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/ppilarski.jpg" alt="Patrick Pilarski" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://sites.ualberta.ca/~pilarski/" target="_blank">Patrick Pilarski</a></br>
-			<a href="https://www.ualberta.ca/medicine/index.html" target="_blank"> Faculty of Medicine and Dentistry</a><br/>University of Alberta</br>
-			<a href="https://deepmind.com/" target="_blank"> DeepMind</a><br/>Edmonton, Alberta</br></br>
+			<a href="https://blinclab.ca" target="_blank">Bionic Limbs for Improved Natural Control Laboratory</a><br/><a href="https://www.ualberta.ca" target="_blank">University of Alberta</a></br>
+			<a href="https://deepmind.com/" target="_blank"> DeepMind, Edmonton, Alberta</a><br/></br></br>
 			</strong></br>
 			<b>Constructivism in Tightly Coupled Human Machine Interfaces</b></br>
                         </br> 
@@ -169,7 +169,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/rdazeley.jpg" alt="Richard Dazeley" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</a></br>
-			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a><br/>Deakin University</br></br>
+			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a><br/><a href="https://www.deakin.edu.au/" target="_blank">Deakin University</a></br></br>
 			</strong></br>
 			<b>Broad-XAI: Human-aligned conversational explanations</b></br>
                         </br> 
