fixing alessandra talk typo

--- a/speakers.html
+++ b/speakers.html
@@ -85,7 +85,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong><a href="https://www.iit.it/people/alessandra-sciutti" target="_blank">Alessandra Sciutti</a></br>
 			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies unit</a></br><a href="https://www.iit.it/" target="_blank">Istituto Italiano di Tecnologia</a></br></br>
 			</strong></br>
-			<b>More Human Learning</b></br>14.00 CEST</br>
+			<b>More Humane Learning</b></br>14.00 CEST</br>
                         </br> 
 		</p>
 	</div>
