including link for program from speakers section

--- a/draftprogram.html
+++ b/draftprogram.html
@@ -75,7 +75,7 @@ tr:nth-child(even) {
     <td>18:45</td>
     <td>20:45 (26th Aug)</td>
     <td>10:45</td>
-    <td>Welcome and introduction</td>
+    <td><b>Welcome and introduction</b></td>
     <td></td>
   </tr>
 
@@ -83,7 +83,7 @@ tr:nth-child(even) {
     <td>19:00</td>
     <td>21:00 (26th Aug)</td>
     <td>11:00</td>
-    <td>Peter Vamplew</td>
+    <td><a href="speakers.html#pvamplew">Peter Vamplew</a></td>
     <td>To be announced</td>
   </tr>
 
@@ -91,7 +91,7 @@ tr:nth-child(even) {
     <td>19:30</td>
     <td>21:30 (26th Aug)</td>
     <td>11:30</td>
-    <td>Richard Dazeley</td>
+    <td><a href="speakers.html#rdazeley">Richard Dazeley</a></td>
     <td>Broad-XAI: Human-aligned conversational explanations</td>
   </tr>
 
@@ -99,7 +99,7 @@ tr:nth-child(even) {
     <td>20:00</td>
     <td>22:00 (26th Aug)</td>
     <td>12:00</td>
-    <td>Benjamin Rosman</td>
+    <td><a href="speakers.html#brosman">Benjamin Rosman</a></td>
     <td>To be announced</td>
   </tr>
 
@@ -107,7 +107,7 @@ tr:nth-child(even) {
     <td>20:30</td>
     <td>22:30 (26th Aug)</td>
     <td>12:30</td>
-    <td>Jens Kober</td>
+    <td><a href="speakers.html#jkober">Jens Kober</a></td>
     <td>Reinforcement Learning with Interactive Corrections</td>
   </tr>
 
@@ -115,7 +115,7 @@ tr:nth-child(even) {
     <td>21:00</td>
     <td>23:00 (26th Aug)</td>
     <td>13:00</td>
-    <td>Contribution talks</td>
+    <td><b>Contribution talks</b></td>
     <td></td>
   </tr>
 
@@ -131,7 +131,7 @@ tr:nth-child(even) {
     <td>21:30</td>
     <td>23:30 (26th Aug)</td>
     <td>13:30</td>
-    <td>Stefan Wermter</td>
+    <td><a href="speakers.html#swermter">Stefan Wermter</a></td>
     <td>To be announced</td>
   </tr>
 
@@ -139,7 +139,7 @@ tr:nth-child(even) {
     <td>22:00</td>
     <td>00:00 (27th Aug)</td>
     <td>14:00</td>
-    <td>Alessandra Sciutti</td>
+    <td><a href="speakers.html#asciutti">Alessandra Sciutti</a></td>
     <td>More Humane Learning</td>
   </tr>
 
@@ -147,7 +147,7 @@ tr:nth-child(even) {
     <td>22:30</td>
     <td>00:30 (27th Aug)</td>
     <td>14:30</td>
-    <td>Bruno Fernandes</td>
+    <td><a href="speakers.html#bfernandes">Bruno Fernandes</a></td>
     <td>To be announced</td>
   </tr>
 
@@ -155,7 +155,7 @@ tr:nth-child(even) {
     <td>23:00</td>
     <td>01:00 (27th Aug)</td>
     <td>15:00</td>
-    <td>Matthew Taylor</td>
+    <td><a href="speakers.html#mtaylor">Matthew Taylor</a></td>
     <td>Agents learning from humans -- what the heck do you want me to do?</td>
   </tr>
 
@@ -163,7 +163,7 @@ tr:nth-child(even) {
     <td>23:30</td>
     <td>01:30 (27th Aug)</td>
     <td>15:30</td>
-    <td>Contribution talks</td>
+    <td><b>Contribution talks</b></td>
     <td></td>
   </tr>
 
@@ -179,7 +179,7 @@ tr:nth-child(even) {
     <td>00:00 (28th Aug)</td>
     <td>02:00 (27th Aug)</td>
     <td>16:00</td>
-    <td>George Konidaris</td>
+    <td><a href="speakers.html#gkonidaris">George Konidaris</a></td>
     <td>To be announced</td>
   </tr>
 
@@ -187,7 +187,7 @@ tr:nth-child(even) {
     <td>00:30 (28th Aug)</td>
     <td>02:30 (27th Aug)</td>
     <td>16:30</td>
-    <td>W. Bradley Knox</td>
+    <td><a href="speakers.html#wbknox">W. Bradley Knox</a></td>
     <td>Reward (Mis)design for Autonomous Driving</td>
   </tr>
 
@@ -195,7 +195,7 @@ tr:nth-child(even) {
     <td>01:00 (28th Aug)</td>
     <td>03:00 (27th Aug)</td>
     <td>17:00</td>
-    <td>Patrick Pilarski</td>
+    <td><a href="speakers.html#ppilarski">Patrick Pilarski</a></td>
     <td>Constructivism in Tightly Coupled Human Machine Interfaces</td>
   </tr>
 
@@ -203,7 +203,7 @@ tr:nth-child(even) {
     <td>01:30 (28th Aug)</td>
     <td>03:30 (27th Aug)</td>
     <td>17:30</td>
-    <td>Felipe Leno Da Silva</td>
+    <td><a href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
     <td>Action Advising for Accelerating Multiagent Reinforcement Learning</td>
   </tr>
 
