--- a/speakers.html
+++ b/speakers.html
@@ -46,7 +46,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <div class="container" style="font-size:18px;">
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="pvamplew" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/pvamplew.jpg" alt="Peter Vamplew" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences/staff-profiles/information-technology/peter-vamplew" target="_blank">Peter Vamplew</a></br>
@@ -57,7 +57,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="brosman" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/brosman.jpg" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.benjaminrosman.com/" target="_blank">Benjamin Rosman</a></br>
@@ -68,7 +68,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="jkober" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/jkober.jpg" alt="Jens Kober" height="200px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="http://www.jenskober.de/" target="_blank">Jens Kober</a></br>
@@ -79,7 +79,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="asciutti" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/asciutti.jpg" alt="Alessandra Sciutti" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.iit.it/people/alessandra-sciutti" target="_blank">Alessandra Sciutti</a></br>
@@ -90,7 +90,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="swermter" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/man.png" alt="Stefan Wermter" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
@@ -100,7 +100,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="wbknox" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/wbknox.jpg" alt="W. Bradley Knox" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.bradknox.net/" target="_blank">W. Bradley Knox</a></br>
@@ -111,7 +111,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="mtaylor" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/mtaylor.jpg" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://drmatttaylor.net/" target="_blank">Matthew Taylor</a></br>
@@ -122,7 +122,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="fleno" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/fleno.png" alt="Felipe Leno da Silva" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://f-leno.github.io/" target="_blank">Felipe Leno da Silva</a></br>
@@ -133,7 +133,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="bfernandes" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/bfernandes.jpg" alt="Bruno Fernandes" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://sites.google.com/ecomp.poli.br/bjtf" target="_blank">Bruno Fernandes</a></br>
@@ -143,7 +143,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="gkonidaris" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/gkonidaris.jpg" alt="George Konidaris" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="http://cs.brown.edu/people/gdk/" target="_blank">George Konidaris</a></br>
@@ -153,7 +153,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="ppilarski" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/ppilarski.jpg" alt="Patrick Pilarski" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://sites.ualberta.ca/~pilarski/" target="_blank">Patrick Pilarski</a></br>
@@ -165,7 +165,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div style="border-top: solid 1px #323232; min-height: 250px;">
+	<div id="rdazeley" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/rdazeley.jpg" alt="Richard Dazeley" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</a></br>
