--- a/draftprogram.html
+++ b/draftprogram.html
@@ -75,8 +75,7 @@ tr:nth-child(even) {
     <td>18:45</td>
     <td>20:45 (26th Aug)</td>
     <td>10:45</td>
-    <td><b>Welcome and introduction</b></td>
-    <td></td>
+    <td colspan="2"><b>Welcome and introduction</b></td>
   </tr>
 
   <tr>
@@ -115,16 +114,14 @@ tr:nth-child(even) {
     <td>21:00</td>
     <td>23:00 (26th Aug)</td>
     <td>13:00</td>
-    <td><b>Contribution talks</b></td>
-    <td></td>
+    <td colspan="2"><b>Contribution talks</b></td>
   </tr>
 
   <tr>
     <td>21:15</td>
     <td>23:15 (26th Aug)</td>
     <td>13:15</td>
-    <td><b>Break</b></td>
-    <td></td>
+    <td colspan="2"><b>Break</b></td>
   </tr>
 
   <tr>
@@ -163,16 +160,14 @@ tr:nth-child(even) {
     <td>23:30</td>
     <td>01:30 (27th Aug)</td>
     <td>15:30</td>
-    <td><b>Contribution talks</b></td>
-    <td></td>
+    <td colspan="2"><b>Contribution talks</b></td>
   </tr>
 
   <tr>
     <td>23:45</td>
     <td>01:45 (27th Aug)</td>
     <td>15:45</td>
-    <td><b>Break</b></td>
-    <td></td>
+    <td colspan="2"><b>Break</b></td>
   </tr>
 
   <tr>
@@ -211,8 +206,7 @@ tr:nth-child(even) {
     <td>02:00 (28th Aug)</td>
     <td>04:00 (27th Aug)</td>
     <td>18:00</td>
-    <td><b>Farewell and conclusions</b></td>
-    <td></td>
+    <td colspan="2"><b>Farewell and conclusions</b></td>
   </tr>
 
 </table>
